[package]
name = "romulus"
version = "0.1.0"
authors = ["jesse <jesse@ysera>"]

[[bin]]
name = "romulus"

[dependencies]
piston = "0.1.4"
piston2d-graphics = "0.1.4"
pistoncore-glutin_window = "0.1.0"
piston2d-opengl_graphics = "0.1.0"

#[dependencies.pistoncore-sdl2_window]
#git = "https://github.com/pistondevelopers/sdl2_window"
